[B] Version 1.6.5 [/B]
- ColombiaPlay2 alpha 
- Update tl support

[B] Version 1.6.4 [/B]
- Added premiumtvchannels support
- Added wstream support
- Added playuc support

[B] Version 1.6.3 [/B]
- Update tl support
- Update whostreams support

[B] Version 1.6.2 [/B]
- Update tl support
- Update mips support

[B] Version 1.6.1 [/B]
- New streamcdn support
- Update tl support
- New cvhls support

[B] Version 1.6.0 [/B]
- New addon icon
- New hqq.tv support
- Improved tl support

[B] Version 1.5 (2018) [/B]
- Beta: ColombiaPlay migraton to okru
- Developer mode enable
- Fix ColombiaRadio section
- Url resolver cosmetic changes 
- New inputstream.adaptive support for cv streams thanks to @peak3d
- Added Ok.ru support 
- Added limpitv support
- Added mi(dot)tv integration
- Added whostreams support
- Added steamango support for movies
- Added telerium support
- Added kastream support
- Update hqq support
- Update mips.tv support
- Update lw support
- Update widestream support
- Update whostreams support
- Update nowlive support
- Update playerfs support
- Update bro.ads.cast support
- Update cv support

[B] Version 1.4 (2017) [/B]
- No tracking
- New ColombiaRadio audio stations
- Added vk support
- Added vergol support
- Added gamovideo support
- Added cv support
- Add zenplayer support
- Add bro.adca.st support
- Update on demand shows support
- Update hqq support
- Update lw support
- Update bro.adca.st support
- Update nowlive support

[B] Version 1.3 (2016) [/B]
- Colombia Play Services
- Gist hosting support
- Invert changelog for fast tracking
- Added 247bay.tv
- Added RCN Offical App
- Added widestream.io support
- Added eb.info support
- Added brightcove referal support
- Added backup URL and gist support
- Added random nowlive.xyz support
- Added Kodi v17 support
- Added random SSH101 support
- Added HQQ support
- Added pxstream.tv support
- Added zony.tv support
- Added janjua support
- Added lw.ml support
- Update caston support
- Update copyleft notice