@@ -2,7 +2,7 @@
 # *
 # * ColombiaTV: ColombiaTV add-on for Kodi.
 # *
-# * Copyleft 2013-2018 Wiiego
+# * Copyleft 2013-2020 Wiiego
 # *
 # * This program is free software: you can redistribute it and/or modify
 # * it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@
 # */
 
 import sys
-import urllib
+import urllib3
 import os
 import re
 
