@@ -2,7 +2,7 @@
 # *
 # * ColombiaTV: ColombiaTV add-on for Kodi.
 # *
-# * Copyleft 2013-2018 Wiiego
+# * Copyleft 2013-2020 Wiiego
 # *
 # * This program is free software: you can redistribute it and/or modify
 # * it under the terms of the GNU General Public License as published by
@@ -25,8 +25,7 @@ import sys
 import os
 
 import simplejson
-import urllib
-import urllib2
+import urllib3
 import cookielib
 import subprocess
 import re
