@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.colombiatv"
        name="ColombiaTV"
-       version="1.6.5"
+       version="1.7.0"
        provider-name="Wiiego">
   <requires>
-    <import addon="xbmc.python" version="2.1.0" />
-    <import addon="script.module.simplejson" />
-    <import addon="script.common.plugin.cache" version="2.5.1" />
-    <import addon="script.module.parsedom" version="2.5.1" />
-    <import addon="script.module.simple.downloader" version="0.9.4" />
-    <import addon="script.module.beautifulsoup" version="3.2.1"/>
-    <import addon="script.module.requests" />
-    <import addon="script.module.httplib2" />
-    <import addon="script.module.urlresolver" optional="true"/>
+    <import addon="xbmc.python" version="3.0.0"/>
+    <import addon="script.module.future" version="0.17.1"/>
+    <import addon="script.module.requests" version="2.22.0"/>
+    <import addon="script.module.urllib3" version="1.25.6"/>
+    <import addon="script.module.simplejson" version="3.17.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
@@ -21,7 +17,12 @@
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <summary lang="en">ColombiaTV</summary>
+    <license>The MIT License (MIT)</license>
     <description lang="en">ColombiaTV is the best addon to watch the main TV Channels and shows from Colombia</description>
     <description lang="es">ColombiaTV es el mejor addon para ver los principales canales y programas de Televisión de Colombia</description>
+
+    <forum>https://github.com/diegofn/wiiego-kodi-addons/issues</forum>
+    <website>https://github.com/diegofn/wiiego-kodi-addons</website>
+    <source>https://github.com/diegofn/wiiego-kodi-addons</source>
   </extension>
 </addon>
